---------------------------------------------------------------------------------------------------
Version: 1.1.0
  Major Features:
    - Enable/Disable camera smoothness per tracker
  Bugfixes:
    - Fix tracker type label

---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 01-09-2020
  Major Features:
    - Use camera and tracker system
    - Use in-game GUI
  Minor Features:
    - (Re)calculate base dimensions when importing TLBE into an existing game

---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: 08-07-2020
  Minor Features:
    - Inform player when TBLE starts to take screenshots (instead of a notification per screenshot)
  Ease of use:
    - Warn that base dimensions are unknown if TLBE is loaded into an existing game
    - Changed "speed increase" default to take one screenshot per minute

---------------------------------------------------------------------------------------------------
Version: 0.1.1
Date: 28-06-2020
  Bugfixes:
    - Basic support loading into existing games
---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: 20-06-2020
  Info:
    - Initial release